force-app/main/default/objects/Form_Data_Table__c/Form_Data_Table__c.object-meta.xml
<CustomObject>
    <label>Form Data Table</label>
    <nameField>
        <displayFormat>Table -{00000}</displayFormat>
        <label>Form Data Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Data Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>