force-app/main/default/objects/Form_Data_Table__c/fields/Child_Relation_Ship_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Relation_Ship_Name__c</fullName>
    <label>Child Relation Ship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>