force-app/main/default/objects/Form_Data_Table__c/fields/Table_Section__c.field-meta.xml
<CustomField>
    <fullName>Table_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table Section</label>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Section Data Tables</relationshipLabel>
    <relationshipName>Section_Data_Tables</relationshipName>
    <type>Lookup</type>
</CustomField>