force-app/main/default/objects/Form_Data_Table__c/fields/Table_Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Table_Where_Clause__c</fullName>
    <label>Table Where Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>